overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ body {
   width: 90%;
   margin: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
 }
